force-app/main/default/objects/Board__c/Board__c.object-meta.xml
<CustomObject>
    <description>A custom object that holds information about snowboard inventory.</description>
    <label>Board</label>
    <nameField>
        <label>Board Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Boards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>