force-app/main/default/objects/Board__c/fields/Ability_Level__c.field-meta.xml
<CustomField>
    <fullName>Ability_Level__c</fullName>
    <label>Ability Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Entry Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>