force-app/main/default/objects/Board__c/fields/Board_Thumbnail__c.field-meta.xml
<CustomField>
    <fullName>Board_Thumbnail__c</fullName>
    <formula>IMAGE(&quot;/resource/1548127735000/boardImages/images/thumbs80/&quot; &amp;  Image_Name__c ,  Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Board Thumbnail</label>
    <type>Text</type>
</CustomField>