force-app/main/default/objects/Board__c/fields/Camber__c.field-meta.xml
<CustomField>
    <fullName>Camber__c</fullName>
    <description>Snowboard record type specific</description>
    <label>Camber</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Camber</fullName>
            </value>
            <value>
                <fullName>Rocker</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>