force-app/main/default/objects/Board__c/fields/Core__c.field-meta.xml
<CustomField>
    <fullName>Core__c</fullName>
    <description>Core material of the board, for inclusion in the search filters</description>
    <label>Core</label>
    <length>255</length>
    <type>Text</type>
</CustomField>