force-app/main/default/objects/Board__c/fields/Flex__c.field-meta.xml
<CustomField>
    <fullName>Flex__c</fullName>
    <label>Flex</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stiff</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Soft</fullName>
            </value>
            <value>
                <fullName>Medium/Stiff</fullName>
            </value>
            <value>
                <fullName>Soft/Medium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>