force-app/main/default/objects/Board__c/fields/Mounting_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Mounting_Pattern__c</fullName>
    <description>Snowboard specific field</description>
    <label>Mounting Pattern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2x4</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>No Binding</fullName>
            </value>
            <value>
                <fullName>4x4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>