force-app/main/default/objects/Board__c/fields/Shape__c.field-meta.xml
<CustomField>
    <fullName>Shape__c</fullName>
    <description>Board shape, will be used in the filters for the store component. Filters will use a fuzzy search to get multiple types</description>
    <label>Shape</label>
    <length>255</length>
    <type>Text</type>
</CustomField>