force-app/main/default/objects/Board__c/fields/Sidecut__c.field-meta.xml
<CustomField>
    <fullName>Sidecut__c</fullName>
    <label>Sidecut</label>
    <length>255</length>
    <type>Text</type>
</CustomField>