force-app/main/default/objects/Board__c/fields/Sidewall__c.field-meta.xml
<CustomField>
    <fullName>Sidewall__c</fullName>
    <label>Sidewall</label>
    <length>255</length>
    <type>Text</type>
</CustomField>