force-app/main/default/objects/Board__c/fields/Snowboard_Type__c.field-meta.xml
<CustomField>
    <fullName>Snowboard_Type__c</fullName>
    <description>This is the type of snowboard, for the snowboard record type only.</description>
    <label>Snowboard Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>