force-app/main/default/objects/Board__c/fields/Stance_Setback__c.field-meta.xml
<CustomField>
    <fullName>Stance_Setback__c</fullName>
    <label>Stance Setback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>