force-app/main/default/objects/Board__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <label>Width</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Midwide</fullName>
            </value>
            <value>
                <fullName>Wide</fullName>
            </value>
            <value>
                <fullName>Wide, Midwide, Regular</fullName>
            </value>
            <value>
                <fullName>Wide, Regular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>